src/assets/Navbar.css
.navbar {
  min-width: 100vw;
  height: 4rem;
  background-color: var(--purple);
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.navbar a {
  color: var(--white);
  padding: 0 1.2rem;
  transition: background .5s ease-in-out;
  height: 4rem;
  display: flex;
  align-items: center;
}

.navbar li {
  list-style-type: none;
}
.navbar-links {
  display: flex;
  align-items: center;
}
.cart-nav {
  position: relative;
}
.cart-count {
  position: absolute;
  top: .6rem;
  right: .7rem;
}
.cart-icon:hover,
.cart-icon:focus {
  outline: none;
}

@media (max-width: 768px) {
  .cart-icon,
  .cart-count {
    fill: var(--white);
    stroke: var(--white);
  }
  .navbar-links {
    display: none;
  }
}
@media (min-width: 768px) {
  .navbar-links {
    padding-right: 2rem;
  }
  .navbar-name:hover,
  .navbar-name:focus {
    background-color: rgb(110, 3, 117);
    outline: none;
  }
  .navbar-links a:hover,
  .navbar-links a:focus {
    outline: none;
    background-color: rgb(110, 3, 117);
  }
}

